--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -464,6 +464,24 @@ $(document).ready(function(){
             alert("Access denied! You don't have enough authority ");
             return;
         }
+        var tagText = document.getElementById("title").innerHTML;
+        console.log(tagText);
+        $(function(callback) {
+            $.ajax({
+                url : '/getDisease',
+                type : 'POST',
+                data : JSON.stringify(tagText),
+                contentType: "application/json; charset=utf-8",
+                success : function(data) {
+                    callback(data);
+                    console.log("success");
+                },
+                error : function (error) {
+                    console.log(error);
+                }
+            });
+        });
+
         var title = document.getElementById("title").innerHTML;
         var content = document.getElementById("description").innerHTML;
         console.log(title);
