--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -45,7 +45,8 @@
 
     /*  Content */
     .modal-content {
-    background-color: #1aa8b9;
+        background-color: lightcyan;
+        color:#777;
     margin: auto;
     padding: 20px;
     padding-bottom: 10%;
@@ -243,10 +244,10 @@
     <span class="glyphicon glyphicon-pencil"></span> Edit
 </button>
 
-<p id="description" style="color:#777; margin-left:6.3cm"></p>
+<p id="description" style="color:#777; margin-left:6.3cm; padding-right: 15%"></p>
     <h1 id="symptom" style="color:#777;margin-left:6.3cm;"> Symptoms</h1>
     <div style=" margin-left:6cm">
-        <ul id="symptomList" style="color:#777"></ul>
+        <ul id="symptomList" style="color:#777;font-size: 20px;"></ul>
     </div>
 
 </div>
