--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -208,9 +208,9 @@ function submitChange() {
         }).done(function(result) {
             console.log(result);
             if (result == 0) {
-                alert("Fail! Disease already existed!");
+                alert("Fail! Article already exists!");
             } else {
-                alert("Success! You have created a new disease!");
+                alert("Success! You have posted a new article!");
 
                  var tagText = obj.name;
                 console.log(title);
