--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -52,7 +52,8 @@
 
     /*  Content */
     .modal-content {
-    background-color: #1aa8b9;
+    background-color: lightcyan;
+    color: #777;
     margin: auto;
     padding: 20px;
     padding-bottom: 10%;
