--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -39,7 +39,7 @@
     }
 
     .modal-content {
-    background-color: #1aa8b9;
+    background-color: lightcyan;
     margin: auto;
     border: 1px solid #888;
     width: 80%;
