--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -504,6 +504,7 @@ $(document).ready(function(){
                     var spanAuthor = document.createElement("span");
 
                     spanAuthor.value = $(this).attr('author');
+                    spanAuthor.id = 'spanAuthor';
                     spanAuthor.innerHTML = $(this).attr('author');
                     articleAuthor.appendChild(spanAuthor);
 
